# ndn-dash

./: README.md  dashMeTHIS.sh  old.md
dash.js/: package.json
dash.js/DashJsMediaFile/: HTTP.mpd  NDN.mpd  index.html
dash.js/ndn-js/: ndn-protocol.xpi
dash.js/ndn-js/contrib/securityLib/: crypto-1.1.js  rsa2.js  rsasign-1.2.js
dash.js/ndn-js/examples/browser/: test-get-async.html  test-publish-async-nfd.html
dash.js/ndn-js/examples/browser/repo-ng/: basic-insertion.html  watched-insertion.html
dash.js/ndn-js/examples/ndnping/: ndn-ping.js
dash.js/ndn-js/examples/node/: fetch.js
dash.js/ndn-js/js/: browserify.js  face.js  name.js
dash.js/ndn-js/js/transport/: web-socket-transport.js
dash.js/src/dash/: DashParser.js  SegmentBaseLoader.js
dash.js/src/ndn-icp-download/: data-path.js  icp.js  ndn-icp-download.js  pending-interest.js
dash.js/src/streaming/: XHRLoader.js
libdash/: CMakeLists.txt
libdash/libdash/: CMakeLists.txt
libdash/libdash/source/network/: AbstractChunk.cpp
libdash/libdash/source/xml/: DOMParser.h  Node.cpp
libdash/libdash_networkpart_test/: HTTPConnection.cpp  HTTPConnection.h
libdash/liblog/include/log/: log.h
libdash/liblog/lib/: liblog.so.1  libnolog.so.1.0.1  log.cpp  log.h
libdash/qtsampleplayer/: CMakeLists.txt  debug.h  main.cpp  qtsampleplayer.ui
libdash/qtsampleplayer/Decoder/: .LibavDecoder.cpp.swp  IVideoObserver.h  LibavDecoder.cpp  LibavDecoder.h
libdash/qtsampleplayer/Managers/: IMultimediaManagerBase.h  IMultimediaManagerObserver.h  IStreamObserver.h  MultimediaManager.cpp  MultimediaManager.h  MultimediaStream.cpp  MultimediaStream.h
libdash/qtsampleplayer/Renderer/: QTAudioRenderer.cpp  QTGLRenderer.cpp  QTGLRenderer.h
libdash/qtsampleplayer/UI/: DASHPlayer.cpp  DASHPlayer.h  DASHPlayerNoGUI.cpp  DASHPlayerNoGUI.h  FullScreenDialog.cpp  FullScreenDialog.h  IDASHPlayerGuiObserver.h  IDASHPlayerNoGuiObserver.h  QtSamplePlayerGui.cpp  QtSamplePlayerGui.h
libdash/qtsampleplayer/libdashframework/Adaptation/: .BufferBasedAdaptationWithRateBased.cpp.swp  AbstractAdaptationLogic.cpp  AbstractAdaptationLogic.h  AdaptationLogicFactory.cpp  AdaptationLogicFactory.h  AlwaysLowestLogic.cpp  AlwaysLowestLogic.h  Bola.cpp  Bola.h  BufferBasedAdaptation.cpp  BufferBasedAdaptation.h  BufferBasedAdaptationWithRateBased.cpp  BufferBasedAdaptationWithRateBased.h  BufferBasedThreeThresholdAdaptation.cpp  BufferBasedThreeThresholdAdaptation.h  IAdaptationLogic.h  ManualAdaptation.cpp  ManualAdaptation.h  Panda.cpp  Panda.h  RateBasedAdaptation.cpp  RateBasedAdaptation.h
libdash/qtsampleplayer/libdashframework/Buffer/: Buffer.h  IMediaObjectBufferObserver.h  MediaObjectBuffer.cpp  MediaObjectBuffer.h
libdash/qtsampleplayer/libdashframework/Input/: DASHManager.cpp  DASHManager.h  DASHReceiver.cpp  DASHReceiver.h  IDASHManagerObserver.h  IDataReceiver.h  INDNConnection.h  MediaObject.cpp  MediaObject.h  MediaObjectDecoder.cpp  MediaObjectDecoder.h  NDNConnection.cpp  NDNConnection.h  NDNConnectionConsumerApi.cpp  NDNConnectionConsumerApi.h
